--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "xlsx": "^0.18.5",
     "xss": "^1.0.15"
   },
